--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>GitHub User Interactive Map</title>
   <meta charset="utf-8">
 </head>
 <link type="text/css" rel="stylesheet" href="style.css">
 <body>
+    <div id="svgDiv"></div>
+    <div id="toolTip" class="tooltip" style="width:150px; height:80px; position:absolute;">
+        <div id="header" class="header"></div>
+        <div class="header-rule"></div>
+        <div id="header1" class="header1"></div>
+        <div id="header2" class="header1"></div>
+    </div>
     <script src="script/d3.v3.min.js"></script>
     <script src="script/network.js"></script>
+
 </body>
+</html>
